# devin-vuln-remediator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.demo.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  analytics_client.py  config.py  dashboard.py  devin_client.py  github_client.py  github_webhook.py  main.py  metrics.py  models.py  poller.py  prompts.py  scanner_import.py  store.py
demo/: findings.example.json  findings.json  findings2.json
scripts/: create_github_issues_from_findings.py  run_bandit_superset.sh  run_safety_superset.sh  seed_demo_data.py  simulate_webhook.py
tests/: test_analytics_client.py  test_config.py  test_dashboard_metrics.py  test_devin_client.py  test_github_webhook.py  test_poller.py  test_prompts.py  test_report.py  test_store_metrics.py
